src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-ofT-dwP0.25-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
